<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内部设备信息采集系统</string>
    <string name="action_settings">Settings</string>
    <string name="login_name_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="lgn_btn_login">登录</string>
    <string name="lgn_btn_clear">清除</string>
    <string name="lgn_btn_setting">设置</string>
    <string name="cnfrm_tv_password">密码</string>
    <string name="cnfrm_btn_comfirm">确定</string>
    <string name="cnfrm_btn_reset">修改密码</string>
    <string name="setting_tv_ip">1.设置IP地址</string>
    <string name="ipsetting_tv_ip">设置IP地址</string>
    <string name="ipsetting_tv_host">主机地址</string>
    <string name="ipsetting_tv_port">端&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;口</string>
    <string name="ipsetting_btn_OK">确&#160;&#160;&#160;&#160;定&#160;ENT</string>
    <string name="ipsetting_btn_ESC">取&#160;&#160;&#160;&#160;消&#160;ESC</string>
    <string name="menu_btn_sbpd">设备盘点</string>
    <string name="menu_btn_sbdj">设备点检</string>
    <string name="loadingdialog_tv_text">数据加载中……</string>
    <string name="loadingdialog_desc">带动画效果的转动对话框</string>
    <string name="sbpd_psjxz_psj">配属局</string>

</resources>
