<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lgn_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="9dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:text="@string/ipsetting_tv_ip"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipsetting_tv_host"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ipsetting_et_host"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipsetting_tv_port"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ipsetting_et_port"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ipsetting_btn_OK"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipsetting_btn_OK"
            android:background="@drawable/btn_default"
            android:textColor="#0079b2"
            android:textSize="19sp" />

        <Button
            android:id="@+id/ipsetting_btn_ESC"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/ipsetting_btn_ESC"
            android:background="@drawable/btn_default"
            android:textColor="#0079b2"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>